# manatsu

./: .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc.json  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  eslint.config.js  global.d.ts  index.html  miho.config.ts  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  prettier.config.mjs  rustfmt.toml  stylelint.config.js  stylelint.config.mjs  tailwind.config.mjs  taze.config.js  tsconfig.json  vite.config.ts  vitest.config.js  vitest.config.ts  vitest.workspace.js
.github/: dependabot.yml  release.yml
.github/workflows/: npm-publish.yml  publish.yml  test-pr.yml
.husky/: pre-commit
cli/: Cargo.toml  README.md
cli/src/: dev.rs  lib.rs  main.rs  project.rs  vue.rs
cli/src/dev/: build.rs  command.rs  component.rs  json.rs  package.rs  packages.rs  release.rs  scaffold.rs
cli/src/dev/component/: icon.rs
cli/src/dev/scaffold/: component.rs  composable.rs  icon.rs
cli/src/project/: template.rs
crates/manatsu/: Cargo.toml
crates/manatsu-dev/: Cargo.toml
crates/manatsu-dev/src/: command.rs  config.rs  macros.rs  main.rs  package.rs  prelude.rs  util.rs  utils.rs
crates/manatsu-dev/src/command/: build.rs  component.rs  composable.rs  plugin.rs  readme.rs  release.rs  tailwind.rs
crates/manatsu/src/: color.rs  command.rs  dev.rs  lib.rs  log.rs  macros.rs  main.rs  prelude.rs  project.rs  theme.rs
crates/manatsu/src/color/: hex.rs  hsl.rs  mod.rs  rgb.rs
crates/manatsu/src/command/: create.rs  mod.rs  tailwind.rs  theme.rs
crates/manatsu/src/dev/: build.rs  json.rs  package.rs  release.rs  scaffold.rs
crates/manatsu/src/dev/scaffold/: component.rs  composable.rs  icon.rs
crates/manatsu/src/project/: manifest.rs  mod.rs  template.rs  util.rs
crates/tauri-plugin-manatsu/: Cargo.toml  build.rs
crates/tauri-plugin-manatsu/permissions/: default.toml
crates/tauri-plugin-manatsu/permissions/autogenerated/: reference.md
crates/tauri-plugin-manatsu/permissions/autogenerated/commands/: error_log_path.toml  hex_to_hsl.toml  hex_to_rgb.toml  hex_to_string.toml  hsl_to_hex.toml  hsl_to_rgb.toml  hsl_to_string.toml  is_dev.toml  log_path.toml  manatsu_version.toml  random_hex_color.toml  random_hsl_color.toml  random_rgb_color.toml  random_string_hex_color.toml  random_string_hsl_color.toml  random_string_rgb_color.toml  read_error_logs.toml  read_logs.toml  rgb_to_hex.toml  rgb_to_hsl.toml  rgb_to_string.toml  save_error_log.toml  save_log.toml  string_to_hex.toml  version_snapshot.toml
crates/tauri-plugin-manatsu/permissions/schemas/: schema.json
crates/tauri-plugin-manatsu/src/: command.rs  error.rs  lib.rs  log.rs  prelude.rs
crates/tauri-plugin-manatsu/src/command/: color.rs  log.rs  mod.rs
playground/: App.vue  tsconfig.json
plugin/: Cargo.toml  README.md
scripts/: build.ts  github.ts  minify.ts  packages.ts  readme.ts  tsconfig.json
src/: index.ts
src/components/button/: Button.vue
src/plugins/: vite.ts
src/themes/: base.ts  manatsu-dark.ts
