[workspace]
members = [
  "crates/manatsu",
  "crates/manatsu-dev",
  "crates/tauri-plugin-manatsu",
]
resolver = "2"

[workspace.package]
homepage = "https://github.com/ferreira-tb/manatsu"
repository = "https://github.com/ferreira-tb/manatsu"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.78"
readme = "README.md"
categories = ["web-programming"]

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
filetype_is_file = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"

[workspace.lints.clippy.pedantic]
level = "deny"
priority = -1
