[package]
name = "manatsu"
version = "0.1.38"
description = "CLI tools for Manatsu"
homepage = "https://github.com/manatsujs/manatsu"
repository = "https://github.com/manatsujs/manatsu"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
convert_case = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
