[package]
name = "manatsu"
version = "0.1.42"
description = "CLI tools for Manatsu"
homepage = "https://github.com/manatsujs/manatsu"
repository = "https://github.com/manatsujs/manatsu"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1"
convert_case = "0.6"
serde_json = "1"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.ureq]
version = "2"
features = ["json"]
