[package]
name = "tauri-plugin-manatsu"
version = "0.1.60"
description = "Manatsu plugin for Tauri"
keywords = [
    "manatsu",
    "tauri",
    "plugin",
    "tauri-plugin",
    "vue",
]
homepage = "https://github.com/manatsujs/manatsu"
repository = "https://github.com/manatsujs/manatsu"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
tauri = "1.5"
