[[bin]]
name = "mana-dev"
path = "src/main.rs"

[package]
name = "manatsu-dev"
version = "0.6.13"
publish = false
homepage = "https://github.com/tsukilabs/manatsu"
repository = "https://github.com/tsukilabs/manatsu"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.76"

[dependencies]
anyhow = "1.0.81"
colored = "2.1.0"
convert_case = "0.6.0"
globset = "0.4.14"
indoc = "2.0.5"
inquire = "0.7.4"
itertools = "0.12.1"
miho = "4.3.2"
regex = "1.10.4"
walkdir = "2.5.0"

[dependencies.clap]
version = "4.5.4"
features = ["derive"]

[dependencies.manatsu]
version = "0.6"
path = "../manatsu"

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.115"
features = ["preserve_order"]

[dependencies.reqwest]
version = "0.12.2"
features = [
    "gzip",
    "json",
]

[dependencies.tokio]
version = "1.36.0"
features = [
    "macros",
    "rt-multi-thread",
]
