[[bin]]
name = "mana-dev"
path = "src/main.rs"

[package]
name = "manatsu-dev"
version = "0.9.10"
publish = false

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[package.license]
workspace = true

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.readme]
workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.82"
colored = "2.1.0"
convert_case = "0.6.0"
globset = "0.4.14"
indoc = "2.0.5"
inquire = "0.7.5"
itertools = "0.12.1"
regex = "1.10.4"
walkdir = "2.5.0"
natord = "1.0.9"

[dependencies.clap]
version = "4.5.4"
features = ["derive"]

[dependencies.serde]
version = "1.0.200"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.116"
features = ["preserve_order"]

[dependencies.reqwest]
version = "0.12.4"
features = ["gzip", "json"]

[dependencies.tokio]
version = "1.37.0"
features = ["macros", "process", "rt-multi-thread"]
