[[bin]]
name = "mana-dev"
path = "src/main.rs"

[package]
name = "manatsu-dev"
version = "0.10.13"
publish = false

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[package.license]
workspace = true

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.readme]
workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.86"
colored = "2.1.0"
convert_case = "0.6.0"
globset = "0.4.14"
indoc = "2.0.5"
inquire = "0.7.5"
itertools = "0.13.0"
regex = "1.10.5"
walkdir = "2.5.0"
natord = "1.0.9"

[dependencies.clap]
version = "4.5.7"
features = ["derive"]

[dependencies.serde]
version = "1.0.203"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.117"
features = ["preserve_order"]

[dependencies.reqwest]
version = "0.12.5"
features = ["gzip", "json", "rustls-tls"]

[dependencies.tokio]
version = "1.38.0"
features = ["macros", "process", "rt-multi-thread"]
