[package]
name = "manatsu"
version = "0.7.2"
description = "CLI tools for Manatsu"
homepage = "https://github.com/tsukilabs/manatsu"
repository = "https://github.com/tsukilabs/manatsu"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.76"
readme = "../../README.md"
categories = ["gui", "web-programming"]
keywords = ["cli", "components", "manatsu", "tauri", "vue"]

[dependencies]
anyhow = "1.0.81"
colored = "2.1.0"
convert_case = "0.6.0"
globset = "0.4.14"
inquire = "0.7.4"
lightningcss = "1.0.0-alpha.55"
zip = "0.6.6"
walkdir = "2.5.0"
bytes = "1.6.0"
itertools = "0.12.1"
regex = "1.10.4"
semver = "1.0.22"
taplo = "0.13.0"
futures = "0.3.30"

[dependencies.clap]
version = "4.5.4"
features = ["derive"]

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.115"
features = ["preserve_order"]

[dependencies.strum]
version = "0.26.2"
features = ["derive"]

[dependencies.toml]
version = "0.8.12"
features = ["preserve_order"]

[dependencies.reqwest]
version = "0.12.2"
features = ["brotli", "gzip", "json"]

[dependencies.tokio]
version = "1.37.0"
features = ["macros", "process", "rt-multi-thread"]
