[package]
name = "manatsu"
version = "0.10.7"
description = "CLI tools for Manatsu"
keywords = ["cli", "components", "manatsu", "tauri", "vue"]

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[package.license]
workspace = true

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.readme]
workspace = true

[package.categories]
workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.84"
convert_case = "0.6.0"
globset = "0.4.14"
inquire = "0.7.5"
zip = "0.6.6"
walkdir = "2.5.0"
bytes = "1.6.0"
itertools = "0.13.0"
regex = "1.10.4"
semver = "1.0.23"
taplo = "0.13.0"
futures = "0.3.30"

[dependencies.clap]
version = "4.5.4"
features = ["derive"]

[dependencies.serde]
version = "1.0.202"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.117"
features = ["preserve_order"]

[dependencies.toml]
version = "0.8.13"
features = ["preserve_order"]

[dependencies.reqwest]
version = "0.12.4"
features = ["brotli", "gzip", "json", "rustls-tls"]

[dependencies.tokio]
version = "1.37.0"
features = ["macros", "process", "rt-multi-thread"]
