[package]
name = "tauri-plugin-manatsu"
version = "0.9.9"
description = "Manatsu plugin for Tauri"
links = "tauri-plugin-manatsu"
keywords = ["manatsu", "plugin", "tauri", "tauri-plugin", "vue"]

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[package.license]
workspace = true

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.readme]
workspace = true

[package.categories]
workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.82"
thiserror = "1.0.59"
chrono = "0.4.38"

[dependencies.sysinfo]
version = "0.30.11"
default-features = false

[dependencies.serde]
features = ["derive"]
version = "1.0.200"

[dependencies.serde_json]
version = "1.0.116"

[dependencies.tauri]
version = "2.0.0-beta.17"

[dependencies.tokio]
version = "1.37.0"
features = ["fs"]

[build-dependencies.tauri-plugin]
version = "2.0.0-beta.13"
features = ["build"]
