[package]
name = "tauri-plugin-manatsu"
version = "0.10.4"
description = "Manatsu plugin for Tauri"
links = "tauri-plugin-manatsu"
keywords = ["manatsu", "plugin", "tauri", "tauri-plugin", "vue"]

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[package.license]
workspace = true

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.readme]
workspace = true

[package.categories]
workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
thiserror = "1.0.60"

[dependencies.sysinfo]
version = "0.30.12"
default-features = false

[dependencies.serde]
features = ["derive"]
version = "1.0.201"

[dependencies.serde_json]
version = "1.0.117"

[dependencies.tauri]
version = "2.0.0-beta.18"

[dependencies.tracing]
version = "0.1.40"
features = ["release_max_level_warn"]

[dependencies.tokio]
version = "1.37.0"
features = ["fs"]

[build-dependencies.tauri-plugin]
version = "2.0.0-beta.15"
features = ["build"]
