[package]
name = "tauri-plugin-manatsu"
version = "0.10.11"
description = "Manatsu plugin for Tauri"
links = "tauri-plugin-manatsu"
keywords = ["manatsu", "plugin", "tauri", "tauri-plugin", "vue"]

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[package.license]
workspace = true

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.readme]
workspace = true

[package.categories]
workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
serde_json = "1.0.117"
thiserror = "1.0.61"
tracing = "0.1.40"

[dependencies.sysinfo]
version = "0.30.12"
default-features = false

[dependencies.serde]
features = ["derive"]
version = "1.0.203"

[dependencies.tauri]
version = "2.0.0-beta.22"

[dependencies.tokio]
version = "1.38.0"
features = ["fs"]

[build-dependencies.tauri-plugin]
version = "2.0.0-beta.17"
features = ["build"]
